--- a/styles/styles.css
+++ b/styles/styles.css
@@ -645,6 +645,11 @@ footer .copyright span {
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
   }
+  .recipes article:first-child p {
+    max-width: 80%;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
   .recipes article figure {
     width: 50%;
   }
@@ -673,6 +678,7 @@ footer .copyright span {
     background-color: #F6F6F6;
     margin: 0;
     height: 100%;
+    padding-left: 2rem;
   }
   .recipes article ul li {
     width: 40%;
@@ -680,6 +686,11 @@ footer .copyright span {
   }
   .recipes article ul li h3 {
     margin-bottom: 0;
+  }
+  .recipes article ul li i {
+    position: absolute;
+    left: -2.6rem;
+    top: 1.1rem;
   }
   .recipes article ul li p {
     margin: 0;
